crates/monochange_integration_tests/tests/snapshots/group_release_note_fallback__group_release_note_fallback_scenarios_snapshot_generated_changelogs.snap
---
source: crates/monochange_integration_tests/tests/group_release_note_fallback.rs
expression: "Value::Object(snapshots)"
---
{
  "group-empty-members-empty": {
    "changed_files": [
      "Cargo.toml",
      "changelog.md",
      "crates/app/CHANGELOG.md",
      "crates/app/Cargo.toml",
      "crates/core/CHANGELOG.md",
      "crates/core/Cargo.toml",
      "group.toml"
    ],
    "changelogFiles": {
      "app": true,
      "core": true,
      "group": true
    },
    "release_targets": [
      {
        "id": "sdk",
        "kind": "group",
        "members": [
          "core",
          "app"
        ],
        "release": true,
        "rendered_changelog_title": "[1.0.1](https://github.com/ifiokjr/monochange/releases/tag/v1.0.1) (2026-04-06)",
        "rendered_title": "sdk v1.0.1 (2026-04-06)",
        "tag": true,
        "tag_name": "v1.0.1",
        "version": "1.0.1",
        "version_format": "primary"
      }
    ]
  },
  "group-empty-one-member-note": {
    "changed_files": [
      "Cargo.toml",
      "changelog.md",
      "crates/app/CHANGELOG.md",
      "crates/app/Cargo.toml",
      "crates/core/CHANGELOG.md",
      "crates/core/Cargo.toml",
      "group.toml"
    ],
    "changelogFiles": {
      "app": true,
      "core": true,
      "group": true
    },
    "release_targets": [
      {
        "id": "sdk",
        "kind": "group",
        "members": [
          "core",
          "app"
        ],
        "release": true,
        "rendered_changelog_title": "[1.1.0](https://github.com/ifiokjr/monochange/releases/tag/v1.1.0) (2026-04-06)",
        "rendered_title": "sdk v1.1.0 (2026-04-06)",
        "tag": true,
        "tag_name": "v1.1.0",
        "version": "1.1.0",
        "version_format": "primary"
      }
    ]
  },
  "group-real-member-note": {
    "changed_files": [
      "Cargo.toml",
      "changelog.md",
      "crates/app/CHANGELOG.md",
      "crates/app/Cargo.toml",
      "crates/core/CHANGELOG.md",
      "crates/core/Cargo.toml",
      "group.toml"
    ],
    "changelogFiles": {
      "app": true,
      "core": true,
      "group": true
    },
    "release_targets": [
      {
        "id": "sdk",
        "kind": "group",
        "members": [
          "core",
          "app"
        ],
        "release": true,
        "rendered_changelog_title": "[1.1.0](https://github.com/ifiokjr/monochange/releases/tag/v1.1.0) (2026-04-06)",
        "rendered_title": "sdk v1.1.0 (2026-04-06)",
        "tag": true,
        "tag_name": "v1.1.0",
        "version": "1.1.0",
        "version_format": "primary"
      }
    ]
  },
  "group-shared-changeset": {
    "changed_files": [
      "Cargo.toml",
      "changelog.md",
      "crates/app/CHANGELOG.md",
      "crates/app/Cargo.toml",
      "crates/cli/CHANGELOG.md",
      "crates/cli/Cargo.toml",
      "crates/core/CHANGELOG.md",
      "crates/core/Cargo.toml",
      "group.toml"
    ],
    "changelogFiles": {
      "app": true,
      "core": true,
      "group": true
    },
    "release_targets": [
      {
        "id": "sdk",
        "kind": "group",
        "members": [
          "core",
          "app",
          "cli"
        ],
        "release": true,
        "rendered_changelog_title": "[2.0.0](https://github.com/ifiokjr/monochange/releases/tag/v2.0.0) (2026-04-06)",
        "rendered_title": "sdk v2.0.0 (2026-04-06)",
        "tag": true,
        "tag_name": "v2.0.0",
        "version": "2.0.0",
        "version_format": "primary"
      }
    ]
  },
  "ungrouped-empty-package": {
    "changed_files": [
      "Cargo.toml",
      "crates/app/CHANGELOG.md",
      "crates/app/Cargo.toml"
    ],
    "changelogFiles": {
      "app": true,
      "core": true,
      "group": true
    },
    "release_targets": [
      {
        "id": "app",
        "kind": "package",
        "members": [
          "app"
        ],
        "release": false,
        "rendered_changelog_title": "app [1.0.1](https://github.com/ifiokjr/monochange/releases/tag/app/v1.0.1) (2026-04-06)",
        "rendered_title": "app v1.0.1 (2026-04-06)",
        "tag": false,
        "tag_name": "app/v1.0.1",
        "version": "1.0.1",
        "version_format": "namespaced"
      }
    ]
  }
}
