crates/monochange_integration_tests/tests/snapshots/group_release_note_fallback__group_release_note_fallback_scenarios_snapshot_release_notes.snap
---
source: crates/monochange_integration_tests/tests/group_release_note_fallback.rs
expression: "Value::Object(snapshots)"
---
{
  "group-empty-members-empty": {
    "changelogs": [
      {
        "owner_id": "sdk",
        "owner_kind": "group",
        "path": "changelog.md",
        "rendered": "[see string snapshot]",
        "sections": [
          {
            "collapsed": false,
            "entries": [
              "- **No package-specific changes were recorded; group `sdk` was updated to 1.0.1.**"
            ],
            "title": "Changed"
          }
        ]
      },
      {
        "owner_id": "app",
        "owner_kind": "package",
        "path": "crates/app/CHANGELOG.md",
        "rendered": "[see string snapshot]",
        "sections": [
          {
            "collapsed": false,
            "entries": [
              "- **No package-specific changes were recorded; `workflow-app` was updated to 1.0.1 as part of group `sdk`.**"
            ],
            "title": "Changed"
          }
        ]
      },
      {
        "owner_id": "core",
        "owner_kind": "package",
        "path": "crates/core/CHANGELOG.md",
        "rendered": "[see string snapshot]",
        "sections": [
          {
            "collapsed": false,
            "entries": [
              "- **No package-specific changes were recorded; `workflow-core` was updated to 1.0.1 as part of group `sdk`.**"
            ],
            "title": "Changed"
          }
        ]
      }
    ],
    "release_targets": [
      {
        "id": "sdk",
        "kind": "group",
        "members": [
          "core",
          "app"
        ],
        "release": true,
        "rendered_changelog_title": "[1.0.1](https://github.com/ifiokjr/monochange/releases/tag/v1.0.1) (2026-04-06)",
        "rendered_title": "v1.0.1 (2026-04-06)",
        "tag": true,
        "tag_name": "v1.0.1",
        "version": "1.0.1",
        "version_format": "primary"
      }
    ],
    "releases": [
      {
        "body": "[see string snapshot]",
        "name": "v1.0.1 (2026-04-06)",
        "tag_name": "v1.0.1",
        "targetId": "sdk",
        "targetKind": "group"
      }
    ]
  },
  "group-empty-one-member-note": {
    "changelogs": [
      {
        "owner_id": "sdk",
        "owner_kind": "group",
        "path": "changelog.md",
        "rendered": "[see string snapshot]",
        "sections": [
          {
            "collapsed": false,
            "entries": [
              "[multiline text]"
            ],
            "title": "Features"
          }
        ]
      },
      {
        "owner_id": "app",
        "owner_kind": "package",
        "path": "crates/app/CHANGELOG.md",
        "rendered": "[see string snapshot]",
        "sections": [
          {
            "collapsed": false,
            "entries": [
              "- **No package-specific changes were recorded; `workflow-app` was updated to 1.1.0 as part of group `sdk`.**"
            ],
            "title": "Changed"
          }
        ]
      },
      {
        "owner_id": "core",
        "owner_kind": "package",
        "path": "crates/core/CHANGELOG.md",
        "rendered": "[see string snapshot]",
        "sections": [
          {
            "collapsed": false,
            "entries": [
              "[multiline text]"
            ],
            "title": "Features"
          }
        ]
      }
    ],
    "release_targets": [
      {
        "id": "sdk",
        "kind": "group",
        "members": [
          "core",
          "app"
        ],
        "release": true,
        "rendered_changelog_title": "[1.1.0](https://github.com/ifiokjr/monochange/releases/tag/v1.1.0) (2026-04-06)",
        "rendered_title": "v1.1.0 (2026-04-06)",
        "tag": true,
        "tag_name": "v1.1.0",
        "version": "1.1.0",
        "version_format": "primary"
      }
    ],
    "releases": [
      {
        "body": "[see string snapshot]",
        "name": "v1.1.0 (2026-04-06)",
        "tag_name": "v1.1.0",
        "targetId": "sdk",
        "targetKind": "group"
      }
    ]
  },
  "group-real-member-note": {
    "changelogs": [
      {
        "owner_id": "sdk",
        "owner_kind": "group",
        "path": "changelog.md",
        "rendered": "[see string snapshot]",
        "sections": [
          {
            "collapsed": false,
            "entries": [
              "[multiline text]"
            ],
            "title": "Features"
          }
        ]
      },
      {
        "owner_id": "app",
        "owner_kind": "package",
        "path": "crates/app/CHANGELOG.md",
        "rendered": "[see string snapshot]",
        "sections": [
          {
            "collapsed": false,
            "entries": [
              "- **No package-specific changes were recorded; `workflow-app` was updated to 1.1.0 as part of group `sdk`.**"
            ],
            "title": "Changed"
          }
        ]
      },
      {
        "owner_id": "core",
        "owner_kind": "package",
        "path": "crates/core/CHANGELOG.md",
        "rendered": "[see string snapshot]",
        "sections": [
          {
            "collapsed": false,
            "entries": [
              "[multiline text]"
            ],
            "title": "Features"
          }
        ]
      }
    ],
    "release_targets": [
      {
        "id": "sdk",
        "kind": "group",
        "members": [
          "core",
          "app"
        ],
        "release": true,
        "rendered_changelog_title": "[1.1.0](https://github.com/ifiokjr/monochange/releases/tag/v1.1.0) (2026-04-06)",
        "rendered_title": "v1.1.0 (2026-04-06)",
        "tag": true,
        "tag_name": "v1.1.0",
        "version": "1.1.0",
        "version_format": "primary"
      }
    ],
    "releases": [
      {
        "body": "[see string snapshot]",
        "name": "v1.1.0 (2026-04-06)",
        "tag_name": "v1.1.0",
        "targetId": "sdk",
        "targetKind": "group"
      }
    ]
  },
  "group-shared-changeset": {
    "changelogs": [
      {
        "owner_id": "sdk",
        "owner_kind": "group",
        "path": "changelog.md",
        "rendered": "[see string snapshot]",
        "sections": [
          {
            "collapsed": false,
            "entries": [
              "[multiline text]"
            ],
            "title": "Breaking changes"
          }
        ]
      },
      {
        "owner_id": "app",
        "owner_kind": "package",
        "path": "crates/app/CHANGELOG.md",
        "rendered": "[see string snapshot]",
        "sections": [
          {
            "collapsed": false,
            "entries": [
              "[multiline text]"
            ],
            "title": "Features"
          }
        ]
      },
      {
        "owner_id": "cli",
        "owner_kind": "package",
        "path": "crates/cli/CHANGELOG.md",
        "rendered": "[see string snapshot]",
        "sections": [
          {
            "collapsed": false,
            "entries": [
              "[multiline text]"
            ],
            "title": "Fixes"
          }
        ]
      },
      {
        "owner_id": "core",
        "owner_kind": "package",
        "path": "crates/core/CHANGELOG.md",
        "rendered": "[see string snapshot]",
        "sections": [
          {
            "collapsed": false,
            "entries": [
              "[multiline text]"
            ],
            "title": "Breaking changes"
          }
        ]
      }
    ],
    "release_targets": [
      {
        "id": "sdk",
        "kind": "group",
        "members": [
          "core",
          "app",
          "cli"
        ],
        "release": true,
        "rendered_changelog_title": "[2.0.0](https://github.com/ifiokjr/monochange/releases/tag/v2.0.0) (2026-04-06)",
        "rendered_title": "v2.0.0 (2026-04-06)",
        "tag": true,
        "tag_name": "v2.0.0",
        "version": "2.0.0",
        "version_format": "primary"
      }
    ],
    "releases": [
      {
        "body": "[see string snapshot]",
        "name": "v2.0.0 (2026-04-06)",
        "tag_name": "v2.0.0",
        "targetId": "sdk",
        "targetKind": "group"
      }
    ]
  },
  "ungrouped-empty-package": {
    "changelogs": [
      {
        "owner_id": "app",
        "owner_kind": "package",
        "path": "crates/app/CHANGELOG.md",
        "rendered": "[see string snapshot]",
        "sections": [
          {
            "collapsed": false,
            "entries": [
              "- **No package-specific changes were recorded; `workflow-app` was updated to 1.0.1.**"
            ],
            "title": "Changed"
          }
        ]
      }
    ],
    "release_targets": [
      {
        "id": "app",
        "kind": "package",
        "members": [
          "app"
        ],
        "release": false,
        "rendered_changelog_title": "app [1.0.1](https://github.com/ifiokjr/monochange/releases/tag/app/v1.0.1) (2026-04-06)",
        "rendered_title": "app v1.0.1 (2026-04-06)",
        "tag": false,
        "tag_name": "app/v1.0.1",
        "version": "1.0.1",
        "version_format": "namespaced"
      }
    ],
    "releases": []
  }
}
